# icon-cache

./: Cargo.toml  LICENSE-MIT  README.md
assets/: icon-theme.cache
src/: file.rs  lib.rs  raw.rs
